# Brights_2

./: .gitmodules  README.md
10_1_1/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp
10_1_2/: log.cpp
10_2_1/: main.cpp
10_3_1/: allocator.hpp  main.cpp
10_4_1/: test_backward.cpp  test_fmt.cpp  test_json.cpp
1_3_2/: bankaccount.cpp  bankaccount.h  data.txt  main.cpp  test
1_4_1/: 1_4_1.cpp  1_4_1_fifth.cpp  1_4_1_fourth.cpp  1_4_1_second.cpp  1_4_1_sixth.cpp  1_4_1_third.cpp
2_1_1/: 2_1_1_ex1.cpp  2_1_1_ex2.cpp  2_1_1_ex3.cpp  2_1_1_ex4.cpp  2_1_1_ex5.cpp  2_1_1_ex6.cpp  2_1_1_ex7.cpp
2_1_2/: 2_1_2_ex1.cpp  2_1_2_ex2.cpp  2_1_2_ex3.cpp  2_1_2_ex4.cpp  2_1_2_ex5.cpp  2_1_2_ex6.cpp
2_1_3/: 2_1_3.cpp
2_2_1/: CMakeLists.txt  food.cpp  food.h  main.cpp  test
2_2_1/includes/: CMakeLists.txt  food.cpp  food.h  utils.h
2_2_2/: CMakeLists.txt  main.cpp
2_2_2/includes/: utils.h
2_2_2/src/: utils.cpp
2_3_1/: 2_3_1_ex1.cpp
2_3_2/: CMakeLists.txt  main.cpp
2_3_2/includes/: datareads.h
2_3_2/src/: CMakeLists.txt  datareads.cpp
2_4_1/: CMakeLists.txt  main.cpp
2_4_1/includes/: calculate_file_size.h  parse_arguments.h  print_file_chars.h  print_file_data.h  print_file_lines.h  print_file_wordcount.h
2_4_1/src/: CMakeLists.txt  calculate_file_size.cpp  parse_arguments.cpp  print_file_chars.cpp  print_file_data.cpp  print_file_lines.cpp  print_file_wordcount.cpp
2_4_2/: CMakeLists.txt  main.cpp
2_4_2/includes/: device.h  read_from_csv.h  write_to_csv.h
2_4_2/src/: CMakeLists.txt  device.cpp  read_from_csv.cpp  write_to_csv.cpp
3_1_1/: 1.cpp  2.cpp  3.cpp  4.cpp
3_1_2/: CMakeLists.txt  main.cpp
3_1_2/includes/: constants.h  user_inputs.h  utils.h  weather.h
3_1_2/src/: CMakeLists.txt  Data.txt  user_inputs.cpp  utils.cpp  weather.cpp
3_2_1/: 3_2_1.cpp
3_2_3/: 1.cpp  2.cpp  3.cpp
3_3_1/: main.cpp  pascal.cpp  pascal.h  pascal_tests.cpp
3_3_2/ex1/: math_utils.cpp  math_utils.h  math_utils_test.cpp  test
3_3_2/ex2/: string_utils.cpp  string_utils.h  string_utils_test.cpp  test
6_1_1/ex1/: main.cpp  status.cpp  status.hpp  test
6_1_1/ex2/: main.cpp  state_machine.cpp  state_machine.hpp  test
6_1_2/ex1/: CMakeLists.txt  main.cpp
6_2_1/ex1/: CMakeLists.txt  main.cpp
6_2_2/include/: c_file_read.hpp
6_2_2/src/: c_file_read.cpp
6_2_3/: main.cpp
6_2_3/include/: union.hpp
6_2_3/src/: union.cpp
6_3_1/ex1/: main.cpp  static_class.cpp  static_class.hpp  test
6_3_1/ex2/: ex2.cpp  ex2.hpp  main.cpp  test
6_3_2/: .gitignore
6_3_2/ex1 (textfile)/: CMakeLists.txt  main.cpp
6_3_2/ex2(custom_int)/: CMakeLists.txt  README.md  main.cpp
6_3_2/ex2(custom_int)/include/: custom_int.hpp
6_3_2/ex2(custom_int)/src/: CMakeLists.txt  custom_int.cpp
6_3_2/ex2(custom_int)/tests/: CMakeLists.txt  test_custom_int.cpp
6_3_2/ex3/: main.cpp
6_4_1/ex1/: main.cpp
6_4_1/ex_2_3/: main.cpp  overloads.cpp  overloads.hpp  test
7_1_1/ex1/: main.cpp
7_2_1/: variadics.cpp
7_2_2/: main.cpp
7_4_1/: CMakeLists.txt  main.cpp
7_4_2/: interface.hpp  main.cpp
8_1_1/: main.cpp
8_1_2/: animal.cpp  animal.hpp  data.txt  main.cpp
8_2_1/: .clang-format
8_3_1/tests/: CMakeLists.txt  test_container.cpp
8_4_1/heap_array_memtests/: CMakeLists.txt  main.cpp
8_4_1/heap_array_memtests/include/: container.hpp
8_4_2/: memerror1.hpp  memerror2.hpp  memerror3.hpp  test_mem1.cpp  test_mem2.cpp  test_mem3.cpp
9_1_1/: ex1.cpp  ex2.cpp
9_1_2/: ex1.cpp
9_2_1/: ex1.cpp
9_3_1/: ex1.cpp  ex2.cpp  ex2.hpp
9_4_1/: ex1.cpp  ex2.cpp
9_4_2/: ex1.cpp  ex2.cpp
asstest/: CMakeLists.txt  main.cpp
ex_1_2_2/: 1_2_2.cpp
ex_1_2_3/: ex_1_2_3.cpp  test
ex_1_2_4/: ex_1_2_4.cpp  test
ex_1_2_5/: ex_1_2_5.cpp  testi
ex_1_3_1/: 1_3_1_1.cpp  1_3_1_10.cpp  1_3_1_2.cpp  1_3_1_3.cpp  1_3_1_4.cpp  1_3_1_5.cpp  1_3_1_6.cpp  1_3_1_7.cpp  1_3_1_8.cpp  1_3_1_9.cpp  test
(+54 files in other folders)
